--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="page-body">
 
   <header class="main-header filled-section">
-    <nav class="main-nav">
+    <nav class="main-nav container">
       <a class="main-header-logo">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
@@ -35,47 +35,46 @@
       <h2 class="visually-hidden">Информация</h2>
 
       <div class="slider filled-section">
-        <div>
+        <div class="container">
           <div class="slide slide-active">
-            <div class="slide-text">
+            <div>
               <p class="slide-title">Долго, дорого,<br>
-                скурпулезно.</p>
-              <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+                скрупулезно.</p>
+              <p class="slide-text">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button" href="blank.html">Узнать больше</a>
             </div>
             <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
           </div>
           <div class="slide">
-            <div class="slide-text">
-              <p class="slide-title">Любим математику<br>
-                как никто другой</p>
-              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-              <a class="button" href="blank.html">Узнать больше</a>
-            </div>
+            <p class="slide-title">Любим математику<br>
+              как никто другой</p>
+            <p class="slide-text">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+            <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
           </div>
           <div class="slide">
             <p class="slide-title">Только ночь,<br>
               только хардкор</p>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <p class="slide-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+            </p>
             <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="">
           </div>
         </div>
         <ul class="slider-list">
-          <li class="slide-item slide-item-active"><button type="button">Слайд 1</button></li>
-          <li class="slide-item"><button type="button">Слайд 2</button></li>
-          <li class="slide-item"><button type="button">Слайд 3</button></li>
+          <li class="slide-item slide-item-active"><button type="button" aria-label="Слайд 1"></button></li>
+          <li class="slide-item"><button type="button" aria-label="Слайд 2"></button></li>
+          <li class="slide-item"><button type="button" aria-label="Слайд 3"></button></li>
         </ul>
       </div>
     </section>
 
-    <section class="products container">
+    <section class="products container section-bottom-border">
       <h2 class="visually-hidden">Продукты</h2>
       <ul class="products-list">
         <li class="product-item product-item-sites">
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="button" href="blank.html">Заказать</a>
         </li>
         <li class="product-item product-item-apps">
@@ -90,7 +89,7 @@
         </li>
       </ul>
     </section>
-    <section class="features container">
+    <section class="features container section-bottom-border">
       <div class="features-wrapper">
         <h2 class="visually-hidden">О нас</h2>
         <p class="features-title">Мы — маленькая, но гордая <br>
@@ -106,28 +105,26 @@
         </ul>
       </div>
       <div class="stat-wrapper">
-        <h3 class="hidden">Статистика</h3>
+        <h3 class="visually-hidden">Статистика</h3>
         <p class="stat-title">с 2004 года Любим точность во всем:</p>
         <ul class="statistics">
           <li class="stat-item">
-            <p class="stat-subtitle"><span>146</span>%</p>
-            <p>Уровень<br> самоотдачи
+            <p class="stat-subtitle">146<sup class="percent">%</sup></p>
+            <p class="stat-text">Уровень<br> самоотдачи
             </p>
           </li>
           <li class="stat-item">
-            <p class="stat-subtitle"><span>100</span>%</p>
-            <p>Соблюдение<br> сроков
-            </p>
-          </li>
+            <p class="stat-subtitle">100<sup class="percent">%</sup>
+            <p class="stat-text">Соблюдение<br>сроков</p>
           <li class="stat-item">
-            <p class="stat-subtitle"><span>50</span>%</p>
-            <p>Минимальная<br> предоплата
+            <p class="stat-subtitle"><span class="stat-digit">50</span><sup class="percent">%</sup></p>
+            <p class="stat-text">Минимальная<br> предоплата
             </p>
           </li>
         </ul>
       </div>
     </section>
-    <section class="partners container">
+    <section class="partners container section-bottom-border">
       <h2 class="visually-hidden">Партнеры</h2>
       <ul class="partners-list">
         <li class="partner-item">
@@ -154,17 +151,20 @@
     </section>
   </main>
   <footer class="main-footer">
-    <section class="map">
-      <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
-    </section>
-    <div class="contact-wrapper container">
-      <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-        <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
-        </p>
-        <a class="button" href="blank.html">Напишите нам</a>
+    <div class="map-wrapper">
+      <section class="map">
+        <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
       </section>
+      <div class="contact-wrapper container">
+        <section class="contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <p class="contact-title">NЁRDS DESIGN STUDIO</p>
+          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br><br> тел. +7 (812)
+            275-75-75
+          </p>
+          <a class="button" href="blank.html">Напишите нам</a>
+        </section>
+      </div>
     </div>
     <section class="footer-social container">
       <h2 class="visually-hidden">Давайте дружить!</h2>
@@ -218,7 +218,9 @@
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
-    <button class="modal-close" type="button">Закрыть</button>
+    <button class="modal-close" type="button">
+      <span class="visually-hidden">Закрыть</span>
+    </button>
   </section>
 
 </body>
