правки по сетке

--- a/catalog.html
+++ b/catalog.html
@@ -38,14 +38,14 @@
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <form action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="filter-items">
-            <legend class="filter-title cost-title">Стоимость:</legend>
+            <legend class="filter-title">Стоимость:</legend>
             <div class="range-filter">
               <div class="range-controls">
                 <div class="scale">
                   <div class="bar" style="
                     width: 70%;
-                    margin-left: 0%
-                  "></div>
+                    margin-left: 0%">
+                  </div>
                 </div>
                 <div class="toggle toggle-min" tabindex="0"></div>
                 <div class="toggle toggle-max" tabindex="0"></div>
@@ -61,7 +61,7 @@
             </div>
           </fieldset>
           <fieldset class="filter-items">
-            <legend class="filter-title layout">Сетка:</legend>
+            <legend class="filter-title">Сетка:</legend>
             <ul class="filter-list">
               <li class="radio-item filter-item">
                 <input class="visually-hidden filter-input-radio filter-input" type="radio" checked name="layout"
@@ -81,7 +81,7 @@
             </ul>
           </fieldset>
           <fieldset class="filter-items">
-            <legend class="filter-title filter-advant">Особенности:</legend>
+            <legend class="filter-title">Особенности:</legend>
             <ul class="filter-list">
               <li class="checkbox-item filter-item">
                 <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" checked name="slider"
@@ -90,7 +90,7 @@
               </li>
               <li class="checkbox-item filter-item">
                 <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="advantages"
-                  id="filter-">
+                  id="filter-advantages">
                 <label for="filter-advantages">Блок преимуществ</label>
               </li>
               <li class="checkbox-item filter-item">
