--- a/blank.html
+++ b/blank.html
@@ -32,29 +32,31 @@
 
   </main>
   <footer class="main-footer">
-    <section class="map">
-      <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
-    </section>
-    <div class="contact-wrapper container">
-      <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-        <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
-        </p>
-        <a class="button" href="blank.html">Напишите нам</a>
+    <div class="map-wrapper">
+      <section class="map">
+        <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
       </section>
+      <div class="contact-wrapper container">
+        <section class="contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <p class="contact-title">NЁRDS DESIGN STUDIO</p>
+          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
+          </p>
+          <a class="button" href="blank.html">Напишите нам</a>
+        </section>
+      </div>
     </div>
     <section class="footer-social container">
       <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li>
-          <a class="social-item" href="#"><span class="visually-hidden">Вконтакте</span></a>
+          <a class="social-item vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          <a class="social-item fb" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="visually-hidden">Инстаграм</span></a>
+          <a class="social-item insta" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
       <p class="social-title"><b>Давайте дружить, это выгодно!</b></p>
