--- a/catalog.html
+++ b/catalog.html
@@ -130,13 +130,19 @@
         <h3 class="visually-hidden">Направление сортировки</h3>
         <ul class="sorting-direction-list">
           <li>
-            <a class="sorting-decrease sorting-direction sorting-decrease-active" href="blank.html">
+            <a class="sorting-decrease sorting-direction-active sorting-direction" href="blank.html">
               <span class=visually-hidden>по убыванию</span>
+              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 10L0 0H11" fill="#A6A6A6" />
+              </svg>
             </a>
           </li>
           <li>
             <a class="sorting-increase sorting-direction" href="blank.html">
               <span class=visually-hidden>по возрастанию</span>
+              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 0L0 10H11L5.5 0Z" fill="#A6A6A6" />
+              </svg>
             </a>
           </li>
         </ul>
