--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         <h2 class="visually-hidden">О нас</h2>
         <p class="features-title">Мы — маленькая, но гордая <br>
           дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем
+        <p class="features-taxt">Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше
+          креатива. Работаем
           не
           покладая рук, как роботы.</p>
         <p class="features-subtitle">Выполняем заказы на разработку:</p>
@@ -159,8 +160,8 @@
         <section class="contacts">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
-          </p>
+          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br></p>
+          <a class="contact-tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
           <a class="button" href="blank.html">Напишите нам</a>
         </section>
       </div>
