--- a/blank.html
+++ b/blank.html
@@ -22,7 +22,7 @@
       <ul class="site-nav">
         <li class="nav-item"><a href="blank.html">Студия</a></li>
         <li class="nav-item"><a href="blank.html">Клиенты</a></li>
-        <li class="nav-item"><a href="catalog.html"></a>Магазин</a></li>
+        <li class="nav-item"><a href="catalog.html">Магазин</a></li>
         <li class="nav-item"><a href="blank.html">Контакты</a></li>
       </ul>
       <a class="cart-link" href="blank.html">Корзина</a>
@@ -42,7 +42,7 @@
           <p class="contact-title">NЁRDS DESIGN STUDIO</p>
           <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
           </p>
-          <a class="button" href="blank.html">Напишите нам</a>
+          <a class="button button-feedback" href="blank.html">Напишите нам</a>
         </section>
       </div>
     </div>
