--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <p class="contact-title">NЁRDS DESIGN STUDIO</p>
           <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br></p>
           <a class="contact-tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-          <a class="button" href="blank.html">Напишите нам</a>
+          <a class="button button-feedback" href="blank.html">Напишите нам</a>
         </section>
       </div>
     </div>
@@ -185,20 +185,21 @@
   </footer>
   <section class="modal">
     <h2 class="modal-title">Напишите нам</h2>
-    <form class=feedback-form" action="https://echo.htmlacademy.ru" method="post">
+    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="field">
         <label class="field-label" for="login-name">Ваше имя:</label>
-        <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия"
+          pattern="[A-Za-zА-Яа-яЁё]*?\s[A-Za-zА-Яа-яЁё]*" required>
       </p>
       <p class="field">
         <label class="field-label" for="login-email">Ваш email:</label>
         <input class="field-input login-email-user" id="login-email" type="email" name="email"
-          placeholder="email@example.com">
+          placeholder="email@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
       </p>
-      <p class="field">
+      <p class="field field-area">
         <label class="field-label" for="login-text">Текст письма:</label>
-        <input class="field-input login-text" id="login-text" type="textarea" name="text"
-          placeholder="В свободной форме">
+        <textarea class="field-textarea field-input login-text" id="login-text" name="text" rows="4"
+          placeholder="В свободной форме"></textarea>
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
@@ -206,6 +207,8 @@
       <span class="visually-hidden">Закрыть</span>
     </button>
   </section>
+
+  <script src="js/modal.js"></script>
 
 </body>
 
