отправление на защиту наставнику

--- a/blank.html
+++ b/blank.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="img/favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page-body">
@@ -34,14 +34,18 @@
   <footer class="main-footer">
     <div class="map-wrapper">
       <section class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2826.4583295105454!2d30.320384796187934!3d59.938649045894756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1615527888281!5m2!1sru!2sru"
+          width="1440" height="416" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
+
       </section>
       <div class="contact-wrapper container">
         <section class="contacts">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
-          </p>
+          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br></p>
+          <a class="contact-tel" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
           <a class="button button-feedback" href="blank.html">Напишите нам</a>
         </section>
       </div>
@@ -65,20 +69,21 @@
   </footer>
   <section class="modal">
     <h2 class="modal-title">Напишите нам</h2>
-    <form class=feedback-form" action="https://echo.htmlacademy.ru" method="post">
+    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="field">
         <label class="field-label" for="login-name">Ваше имя:</label>
-        <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="field-input login-user" id="login-name" type="text" name="name" placeholder="Имя Фамилия"
+          pattern="[A-Za-zА-Яа-яЁё]*?\s[A-Za-zА-Яа-яЁё]*" required>
       </p>
       <p class="field">
         <label class="field-label" for="login-email">Ваш email:</label>
         <input class="field-input login-email-user" id="login-email" type="email" name="email"
-          placeholder="email@example.com">
+          placeholder="email@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
       </p>
-      <p class="field">
+      <p class="field field-area">
         <label class="field-label" for="login-text">Текст письма:</label>
-        <input class="field-input login-text" id="login-text" type="textarea" name="text"
-          placeholder="В свободной форме">
+        <textarea class="field-textarea field-input login-text" id="login-text" name="text" rows="4"
+          placeholder="В свободной форме"></textarea>
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
@@ -86,5 +91,9 @@
       <span class="visually-hidden">Закрыть</span>
     </button>
   </section>
+
+  <script src="js/modal.min.js"></script>
+
+</body>
 
 </html>
