--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="img/favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page-body">
@@ -315,7 +315,7 @@
     </button>
   </section>
 
-  <script src="js/modal.js"></script>
+  <script src="js/modal.min.js"></script>
 
 </body>
 
