--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="img/favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page-body">
@@ -43,14 +43,14 @@
               <p class="slide-text">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button" href="blank.html">Узнать больше</a>
             </div>
-            <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
+            <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="Изображение телефонов">
           </div>
           <div class="slide">
             <p class="slide-title">Любим математику<br>
               как никто другой</p>
             <p class="slide-text">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
             <a class="button" href="blank.html">Узнать больше</a>
-            <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
+            <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="Изображение мониторов">
           </div>
           <div class="slide">
             <p class="slide-title">Только ночь,<br>
@@ -58,7 +58,8 @@
             <p class="slide-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
             </p>
             <a class="button" href="blank.html">Узнать больше</a>
-            <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="">
+            <img src="img/slider/nerds-index-slide3.png" width="760" height="431"
+              alt="Изображение планшета и смартфона">
           </div>
         </div>
         <ul class="slider-list">
@@ -154,7 +155,11 @@
   <footer class="main-footer">
     <div class="map-wrapper">
       <section class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2826.4583295105454!2d30.320384796187934!3d59.938649045894756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1615527888281!5m2!1sru!2sru"
+          width="1440" height="416" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
+
       </section>
       <div class="contact-wrapper container">
         <section class="contacts">
@@ -208,7 +213,7 @@
     </button>
   </section>
 
-  <script src="js/modal.js"></script>
+  <script src="js/modal.min.js"></script>
 
 </body>
 
